<resources>
    <string name="app_name">RoadDoor</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="string_origen">Origen</string>
    <string name="string_lugardeorigen">Lugar de origen</string>
    <string name="string_destino">Destino</string>
    <string name="string_lugardedestino">Lugar de destino</string>
    <string name="string_desvio">Distancia de desvio</string>
    <string name="string_interes">Puntos de interés</string>
    <string name="string_productos">Productos locales</string>
    <string name="string_servicios">Servicios</string>
    <string name="string_aseos">Aseos/Duchas</string>
    <string name="string_alojamiento">Alojamiento</string>
    <string name="string_eventos">Eventos</string>
    <string name="string_ninios">Niños</string>
    <string name="string_actividades">Actividades</string>
    <string name="string_accesibilidad">Accesibilidad</string>
    <string name="string_mascotas">Mascotas</string>
</resources>