<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_lugardeorigen"
        android:inputType="textPersonName"
        android:text="@string/string_lugardeorigen"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="121dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="213dp"
        android:layout_height="39dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="23dp"
        tools:text="@string/string_origen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_destino"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_desvio"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="170dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="250dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_interes" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_eventos" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_actividades" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_aseos" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_productos" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_servicios" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="539dp">

        <Switch
            android:id="@+id/switch3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_ninios" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_accesibilidad" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_mascotas" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>